--- a/app/src/main/res/drawable/circle_icon.xml
+++ b/app/src/main/res/drawable/circle_icon.xml
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="oval">
-            <solid android:color="#8BBDF2" />
-        </shape>
-    </item>
-</layer-list>
+<vector android:height="10dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="10dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M256,512A256,256 0,1 0,256 0a256,256 0,1 0,0 512z"/>
+</vector>
