--- a/app/src/main/res/layout/activity_admin_bus_operator.xml
+++ b/app/src/main/res/layout/activity_admin_bus_operator.xml
@@ -6,43 +6,57 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/adminBusOperatorLogOutBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Log out"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.908"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/adminBusOperatorAddBtn"
         android:layout_width="348dp"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
-        android:text="Add Bus Operator"
+        android:text="Thêm mới"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/adminBusOperatorTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Bus Operator"
-        android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorLogOutBtn" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/adminBusOperatorRV"
-        android:layout_width="412dp"
-        android:layout_height="510dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="368dp"
+        android:layout_height="578dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorListHeader" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/adminBusOperatorListHeader"
+        android:layout_width="411dp"
+        android:layout_height="68dp"
+        android:background="@color/blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/adminBusOperatorListBackBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/baseline_arrow_back_10"
+            android:contentDescription="@string/back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/adminBusOperatorTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:text="Quản lý nhà xe"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.063"
+            app:layout_constraintStart_toEndOf="@+id/adminBusOperatorListBackBtn"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
