--- a/app/src/main/res/layout/activity_bus_search.xml
+++ b/app/src/main/res/layout/activity_bus_search.xml
@@ -13,11 +13,13 @@
         android:background="@color/primary_color"
         android:padding="10dp"
         android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
         >
         <ImageView
+            android:id="@+id/backButtonScreen"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:background="@drawable/ic_location"
+            android:background="@drawable/baseline_arrow_back_10"
             android:layout_gravity="center"
             />
         <LinearLayout
@@ -27,6 +29,7 @@
             android:orientation="vertical"
             >
             <TextView
+                android:id="@+id/fromToString"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hà Nội -> Hà Giang"
@@ -37,6 +40,7 @@
 
                 />
             <TextView
+                android:id="@+id/dateString"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="T6, 21/04/2023"
@@ -48,17 +52,24 @@
                 />
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
+    <ScrollView
         android:id="@+id/search_filter"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="10dp"
+        android:orientation="horizontal"
+        >
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:paddingHorizontal="15dp"
         android:paddingVertical="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/header"
         android:orientation="horizontal"
         >
+
         <Button
+            android:id="@+id/filterBusType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Loại xe"
@@ -66,51 +77,48 @@
             android:backgroundTint="@color/white"
             android:textColor="@color/teal_700"
             android:fontFamily="@font/montserrat"
-            android:drawableLeft="@drawable/ic_location"
+            android:drawableLeft="@drawable/ic_bus"
             android:textSize="12dp"
             android:minHeight="35dip"
             android:paddingHorizontal="10dp"
             />
         <Button
+            android:id="@+id/filterBusOperator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nhà xe"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
             android:backgroundTint="@color/white"
             android:textColor="@color/teal_700"
             android:fontFamily="@font/montserrat"
-            android:drawableLeft="@drawable/ic_location"
+            android:drawableLeft="@drawable/ic_ticket"
             android:textSize="12dp"
             android:minHeight="35dip"
             android:paddingHorizontal="10dp"
             />
         <Button
+            android:id="@+id/filterBusPricing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Giá vé"
-            android:layout_marginLeft="15dp"
+            android:text="Giá"
+            android:layout_marginLeft="10dp"
             android:backgroundTint="@color/white"
             android:textColor="@color/teal_700"
             android:fontFamily="@font/montserrat"
-            android:drawableLeft="@drawable/ic_location"
+            android:drawableLeft="@drawable/ic_money"
             android:textSize="12dp"
             android:minHeight="35dip"
             android:paddingHorizontal="10dp"
             />
-    </LinearLayout>
 
-    <ScrollView
+    </LinearLayout>
+    </ScrollView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_bus_search"
         android:layout_width="match_parent"
+        android:padding="20dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/search_filter"
-        >
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_bus_search"
-            android:layout_width="match_parent"
-            android:padding="20dp"
-            android:layout_height="wrap_content"
-
-            />
-    </ScrollView>
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
