--- a/app/src/main/res/layout/fragment_operator_filter_item.xml
+++ b/app/src/main/res/layout/fragment_operator_filter_item.xml
@@ -10,22 +10,24 @@
         android:layout_height="wrap_content"
         >
     <TextView
+        android:id="@+id/itemName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bằng Phấn"
         android:textColor="@color/button_color"
         android:fontFamily="@font/montserrat_medium"
-        android:textSize="20dp"
+        android:textSize="17dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         />
 
     <RadioButton
+        android:id="@+id/radioButtonSelect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-
+        android:enabled="false"
         />
     </RelativeLayout>
     <View
