--- a/app/src/main/res/layout/fragment_pricing_filter.xml
+++ b/app/src/main/res/layout/fragment_pricing_filter.xml
@@ -6,6 +6,38 @@
     android:layout_height="wrap_content"
     android:padding="10dp"
     tools:context=".PricingFilter">
+    <RelativeLayout
+        android:id="@+id/headerFilter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+        <TextView
+            android:id="@+id/filterTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chọn giá"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="16dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:textColor="@color/button_color"
+            />
+
+        <TextView
+            android:id="@+id/closeFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/close"
+            android:fontFamily="@font/montserrat_medium"
+            android:textSize="14dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/primary_color"
+            />
+    </RelativeLayout>
+
+
     <TextView
         android:id="@+id/notePricingFilter"
         android:layout_width="match_parent"
@@ -13,16 +45,20 @@
         android:text="Vui lòng chọn mức giá tối thiểu bạn muốn tra cứu: "
         android:fontFamily="@font/montserrat_medium"
         android:textSize="15dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/headerFilter"
         />
-    <SeekBar
+    <com.google.android.material.slider.Slider
         android:id="@+id/pricingSeekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/notePricingFilter"
         android:layout_marginTop="20dp"
-        android:max="10000000"
-        android:min="0"
+        android:valueTo="10000000"
+        android:valueFrom="0"
+        app:trackColor="@color/teal_200"
+        app:thumbColor="@color/primary_color"
+        android:stepSize="100000"
         app:layout_constraintTop_toBottomOf="@+id/notePricingFilter"
         />
 
@@ -46,7 +82,7 @@
             android:id="@+id/pricingValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100.000đ"
+            android:text="0đ"
             android:textSize="25dp"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/montserrat_bold"
@@ -93,7 +129,7 @@
             android:textSize="15dp"
             android:layout_alignParentRight="true"
             android:fontFamily="@font/montserrat_bold"
-            android:background="@drawable/panel"
+            android:backgroundTint="@color/button_color"
             android:paddingHorizontal="20dp"
             />
     </RelativeLayout>
