--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -21,15 +21,15 @@
             android:id="@id/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
             android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="15dp"
                 android:src="@drawable/logo" />
@@ -38,9 +38,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="3dp"
+                android:layout_marginStart="3dp"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/login_home"
@@ -238,9 +238,12 @@
                 android:textColor="@color/button_color"
                 android:textSize="19sp" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/viewAllNews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAllCaps="false"
+                android:background="@android:color/transparent"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginHorizontal="20dp"
