--- a/app/src/main/res/layout/fragment_news_item.xml
+++ b/app/src/main/res/layout/fragment_news_item.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/panel"
     android:elevation="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="20dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="20dp"
     android:layout_marginBottom="20dp"
     android:layout_marginTop="10dp"
 
@@ -17,7 +17,10 @@
         android:id="@+id/news_item_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_launcher_background"
         />
 
     <TextView
