--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#D3D3D3"
+    android:background="#f4f4f4"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
@@ -16,9 +16,11 @@
 
     <GridView
         android:id="@+id/adminGV"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="494dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="130dp"
+        android:layout_marginEnd="10dp"
         android:horizontalSpacing="10dp"
         android:numColumns="2"
         android:verticalSpacing="10dp"
