--- a/app/src/main/res/layout/activity_admin_bus.xml
+++ b/app/src/main/res/layout/activity_admin_bus.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#D3D3D3"
+    android:background="#f4f4f4"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/adminBusRV"
-        android:layout_width="405dp"
-        android:layout_height="561dp"
+        android:layout_width="407dp"
+        android:layout_height="550dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
