--- a/app/src/main/res/layout/admin_bus_list_item.xml
+++ b/app/src/main/res/layout/admin_bus_list_item.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
+    android:background="@drawable/panel"
+    android:elevation="10dp"
     android:layout_width="wrap_content"
     android:layout_height="325dp">
 
@@ -246,7 +247,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/adminBusListFooterConstraintLayout"
         android:layout_width="404dp"
         android:layout_height="62dp"
         android:layout_marginTop="4dp"
