--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -83,13 +83,13 @@
                 android:layout_weight="1"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_location"/>
+                android:src="@drawable/ic_location_red"/>
             <ImageView
                 android:layout_weight="1"
                 android:layout_marginLeft="10dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_location"/>
+                android:src="@drawable/ic_location_blue"/>
             <ImageView
                 android:layout_weight="1"
                 android:layout_marginLeft="10dp"
