--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -36,6 +36,7 @@
             />
 
             <TextView
+                android:id="@+id/loginBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -63,29 +64,7 @@
             app:layout_constraintTop_toBottomOf="@+id/header" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <ImageView
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_location_red"/>
-            <ImageView
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_location_blue"/>
-            <ImageView
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_calendar"/>
-        </LinearLayout>
-        <LinearLayout
+            android:id="@+id/view"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="210dp"
