--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -14,6 +14,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="242dp"
+            android:layout_marginTop="-20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/curved_bg" />
 
