refactor: build add blog ui

--- a/app/src/main/res/layout/activity_confirm_information.xml
+++ b/app/src/main/res/layout/activity_confirm_information.xml
@@ -604,7 +604,8 @@
     <View
         android:id="@+id/view5"
         android:layout_width="0dp"
-        android:layout_height="1dp"
+        android:layout_height="2dp"
+        android:background="@color/light_gray"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -616,11 +617,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/yellow_panel"
-        android:fontFamily="@font/montserrat_bold"
+        android:fontFamily="@font/montserrat"
         android:paddingVertical="10dp"
         android:text="Tiếp tục"
+        android:textAllCaps="false"
         android:textColor="@android:color/black"
-        android:textSize="17sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view5" />
