--- a/app/src/main/res/drawable/custom_form_input.xml
+++ b/app/src/main/res/drawable/custom_form_input.xml
@@ -4,7 +4,7 @@
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
-            <corners android:radius="10dp" />
+            <corners android:radius="5dp" />
             <stroke android:width="1dp" android:color="@color/blue" />
         </shape>
     </item>
@@ -12,16 +12,16 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
-            <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@android:color/black" />
+            <corners android:radius="5dp" />
+            <stroke android:width="1dp" android:color="@android:color/darker_gray" />
         </shape>
     </item>
 
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/darker_gray" />
-            <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@android:color/black" />
+            <corners android:radius="5dp" />
+            <stroke android:width="1dp" android:color="@android:color/darker_gray" />
         </shape>
     </item>
 </selector>
