--- a/app/src/main/res/layout/activity_admin_blog_create.xml
+++ b/app/src/main/res/layout/activity_admin_blog_create.xml
@@ -1,58 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/btnBack"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="5dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back_icon" />
-
-    <LinearLayout
-        android:id="@+id/layoutLogOut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/headerContainer"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:background="@color/blue"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:id="@+id/btnLogOut"
-            android:layout_width="match_parent"
-            android:layout_height="26dp"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1"
-            android:background="@color/blank"
-            android:contentDescription="this is logout button"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/logout_icon"
-            app:tint="@color/button_color" />
-
         <TextView
-            android:id="@+id/log_out_text_view"
-            android:layout_width="wrap_content"
+            android:id="@+id/txtTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Log out"
-            android:textColor="@color/button_color"
-            android:textStyle="bold" />
-    </LinearLayout>
+            android:layout_marginStart="12dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/montserrat_bold"
+            android:maxLines="1"
+            android:text="Thêm tin tức"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/btnBack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnBack"
+            app:layout_constraintTop_toTopOf="@+id/btnBack" />
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/baseline_arrow_back_10"
+            android:contentDescription="@string/back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
-        android:layout_width="0dp"
+        android:id="@+id/scrollViewForm"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/view5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layoutLogOut">
+        app:layout_constraintTop_toBottomOf="@+id/headerContainer">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,105 +60,172 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_margin="15dp">
 
-                <TextView
-                    android:id="@+id/adminBusInfoCreateTV"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cvThumbnail"
+                    android:layout_width="0dp"
+                    android:layout_height="300dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="3dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/imgThumbnail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitXY"
+                        app:srcCompat="@drawable/background_login" />
+                </androidx.cardview.widget.CardView>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/button2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/blog_information"
-                    android:textSize="36sp"
+                    android:background="@drawable/blue_panel"
+                    android:fontFamily="@font/montserrat"
+                    android:drawableStart="@drawable/baseline_file_upload_24"
+                    android:layout_marginTop="15dp"
+                    android:drawablePadding="5dp"
+                    android:padding="10dp"
+                    android:textAllCaps="false"
+                    android:text="Chọn một ảnh"
+                    android:textColor="#fff"
+                    android:textSize="17sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@+id/cvThumbnail" />
 
                 <TextView
-                    android:id="@+id/adminBusBusOpCreateTitle"
+                    android:id="@+id/textView10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:text="@string/thumbnail"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/txtThumbnail"
+                    android:text="Thông tin tin tức"
+                    android:layout_margin="15dp"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/txtThumbnail" />
+                    app:layout_constraintTop_toBottomOf="@+id/button2" />
 
-                <EditText
-                    android:id="@+id/txtThumbnail"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutTitle"
                     android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:hint="@string/enter_thumbnail_here"
-                    android:textColor="#000000"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="15dp"
+                    android:fontFamily="@font/montserrat"
+                    android:hint="Tiêu đề"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/adminBusBusOpCreateTitle"
-                    app:layout_constraintTop_toBottomOf="@+id/adminBusInfoCreateTV" />
+                    app:layout_constraintStart_toStartOf="@+id/textView10"
+                    app:layout_constraintTop_toBottomOf="@+id/textView10"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    >
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edtTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/title"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
-                    app:layout_constraintStart_toStartOf="@+id/adminBusBusOpCreateTitle"
-                    app:layout_constraintTop_toTopOf="@+id/txtTitle" />
-
-                <EditText
-                    android:id="@+id/txtTitle"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="20dp"
-                    android:hint="@string/enter_title_here"
-                    android:textColor="#000000"
-                    app:layout_constraintEnd_toEndOf="@+id/txtThumbnail"
-                    app:layout_constraintStart_toStartOf="@+id/txtThumbnail"
-                    app:layout_constraintTop_toBottomOf="@+id/txtThumbnail" />
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/content"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/txtContent"
-                    app:layout_constraintStart_toStartOf="@+id/adminBusBusOpCreateTitle"
-                    app:layout_constraintTop_toTopOf="@+id/txtContent" />
-
-                <EditText
-                    android:id="@+id/txtContent"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutContent"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:gravity="start|top"
-                    android:hint="@string/enter_content_here"
-                    android:inputType="textMultiLine"
-                    android:lines="15"
-                    android:maxLines="20"
-                    android:scrollbars="vertical"
-                    android:textColor="#000000"
-                    app:layout_constraintEnd_toEndOf="@+id/txtThumbnail"
-                    app:layout_constraintStart_toStartOf="@+id/txtThumbnail"
-                    app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="15dp"
+                    android:fontFamily="@font/montserrat"
+                    android:hint="Nội dung"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/textView10"
+                    app:layout_constraintTop_toBottomOf="@+id/layoutTitle"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    >
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edtContent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textMultiLine"
+                        android:lines="7"
+                        android:gravity="top"
+                        android:textSize="17sp"
+                        android:overScrollMode="always"
+                        android:scrollbarStyle="insideInset"
+                        android:scrollHorizontally="false"
+                        android:scrollbars="vertical"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
     </ScrollView>
 
-    <Button
-        android:id="@+id/btnAdd"
+    <View
+        android:id="@+id/view5"
         android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="40dp"
-        android:layout_marginBottom="12dp"
-        android:text="@string/add"
+        android:layout_height="2dp"
+        android:background="@color/light_gray"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/continueBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/yellow_panel"
+        android:fontFamily="@font/montserrat"
+        android:paddingVertical="10dp"
+        android:text="Thêm tin tức"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view5" />
+
+
+
+    <!--                <EditText-->
+    <!--                    android:id="@+id/edtTitle"-->
+    <!--                    android:layout_width="0dp"-->
+    <!--                    android:layout_height="50dp"-->
+    <!--                    android:layout_marginTop="15dp"-->
+    <!--                    android:layout_marginEnd="15dp"-->
+    <!--                    android:background="@drawable/custom_form_input"-->
+    <!--                    android:ems="10"-->
+    <!--                    android:fontFamily="@font/montserrat"-->
+    <!--                    android:hint="Tiêu đề"-->
+    <!--                    android:inputType="text"-->
+    <!--                    android:padding="12dp"-->
+    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                    app:layout_constraintStart_toStartOf="@+id/textView10"-->
+    <!--                    app:layout_constraintTop_toBottomOf="@+id/textView10" />-->
+
+    <!--                <EditText-->
+    <!--                    android:id="@+id/edtContent"-->
+    <!--                    android:layout_width="0dp"-->
+    <!--                    android:layout_height="50dp"-->
+    <!--                    android:layout_marginTop="15dp"-->
+    <!--                    android:layout_marginEnd="15dp"-->
+    <!--                    android:background="@drawable/custom_form_input"-->
+    <!--                    android:ems="10"-->
+    <!--                    android:fontFamily="@font/montserrat"-->
+    <!--                    android:hint="Tiêu đề"-->
+    <!--                    android:inputType="text"-->
+    <!--                    android:padding="12dp"-->
+    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                    app:layout_constraintStart_toStartOf="@+id/textView10"-->
+    <!--                    app:layout_constraintTop_toBottomOf="@+id/edtTitle" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
