--- a/app/src/main/res/layout/activity_blog_management_detail.xml
+++ b/app/src/main/res/layout/activity_blog_management_detail.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".BlogDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/headerContainer"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/blue"
+        android:background="@android:color/white"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,8 +24,8 @@
             android:ellipsize="end"
             android:fontFamily="@font/montserrat_bold"
             android:maxLines="1"
-            android:text="Quản lý tin tức"
-            android:textColor="@color/white"
+            android:text="Bộ Thông tin - Truyền thông công nhận VeXeRe là Nền tảng số phục vụ người dân 2022"
+            android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/btnBack"
             app:layout_constraintStart_toEndOf="@+id/btnBack"
@@ -35,7 +36,7 @@
             android:id="@+id/btnBack"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/baseline_arrow_back_10"
+            android:background="@drawable/black_arrow_back_10"
             android:contentDescription="@string/back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,36 +44,60 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <AutoCompleteTextView
-        android:id="@+id/autoTinTuc"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
-        android:completionThreshold="1"
-        android:drawableStart="@drawable/ic_search"
-        android:drawablePadding="5dp"
-        android:padding="10dp"
-        android:hint="Tìm kiếm dựa trên tiêu đề"
-        android:textColorHint="#C6C6C6"
-        android:background="@drawable/custom_form_input"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerContainer" />
-
-    <ListView
-        android:id="@+id/lvTinTuc"
+    <ScrollView
+        android:id="@+id/blog_detail_scroll"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/view5"
+        app:layout_constraintBottom_toBottomOf="@+id/view5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/autoTinTuc" />
+        app:layout_constraintTop_toBottomOf="@+id/headerContainer">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imgBlogDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                app:srcCompat="@drawable/ic_launcher_background" />
+
+            <TextView
+                android:id="@+id/txtUpdateTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/montserrat"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="Cập nhật lần cuối vào ngày 01/01/2020" />
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:background="@color/attribute_gray" />
+
+            <TextView
+                android:id="@+id/txtContent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/blog_content"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </ScrollView>
 
     <View
         android:id="@+id/view5"
@@ -85,15 +110,15 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btnAddBlog"
+        android:id="@+id/continueBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/panel"
-        android:fontFamily="@font/montserrat_bold"
+        android:fontFamily="@font/montserrat"
         android:paddingVertical="10dp"
         android:textAllCaps="false"
-        android:text="Tạo tin tức mới"
+        android:text="Xóa tin tức"
         android:textSize="17sp"
         android:textColor="#fff"
         android:textStyle="bold"
