build bottom sheet dialog template

--- a/app/src/main/res/layout/activity_blog_management.xml
+++ b/app/src/main/res/layout/activity_blog_management.xml
@@ -90,11 +90,11 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/panel"
-        android:fontFamily="@font/montserrat_bold"
+        android:fontFamily="@font/montserrat"
         android:paddingVertical="10dp"
         android:textAllCaps="false"
         android:text="Tạo tin tức mới"
-        android:textSize="17sp"
+        android:textSize="18sp"
         android:textColor="#fff"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
