--- a/app/src/main/res/layout/activity_admin_blog_create.xml
+++ b/app/src/main/res/layout/activity_admin_blog_create.xml
@@ -61,13 +61,13 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="15dp">
+                android:layout_margin="14dp">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cvThumbnail"
                     android:layout_width="0dp"
                     android:layout_height="300dp"
-                    app:cardCornerRadius="10dp"
+                    app:cardCornerRadius="30dp"
                     app:cardElevation="3dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -78,12 +78,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/background_login" />
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/image_photo_svgrepo_com" />
                 </androidx.cardview.widget.CardView>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/button2"
+                    android:id="@+id/btnUpload"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/blue_panel"
@@ -111,7 +111,7 @@
                     android:fontFamily="@font/montserrat_bold"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/button2" />
+                    app:layout_constraintTop_toBottomOf="@+id/btnUpload" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/layoutTitle"
@@ -179,7 +179,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/continueBtn"
+        android:id="@+id/btnAdd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
