fix bug of upload file

--- a/app/src/main/res/layout/blog_see_all_item.xml
+++ b/app/src/main/res/layout/blog_see_all_item.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/default_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
